added swagger for blogs
