# backend/controllers/tags_controller.go
@@ -8,18 +8,19 @@ import (
 )
 
 // create a new tag
-// @Summary Create Tag
-// @Description Create a new tag
-// @Tags tags
-// @Accept json
-// @Produce json
-// @Param request body object{tag=string} true "Tag details"
-// @Success 200 {object} utils.TagResponse
-// @Failure 400 {object} utils.ErrorResponse "Invalid request format"
-// @Failure 401 {object} utils.ErrorResponse "Unauthorized"
-// @Failure 500 {object} utils.ErrorResponse "Error creating tag"
-// @Failure 500 {object} utils.ErrorResponse "Internal server error"
-// @Router /api/tags [POST]
+
+//	@Summary		Create Tag
+//	@Description	Create a new tag
+//	@Tags			tags
+//	@Accept			json
+//	@Produce		json
+//	@Param			request	body		object{tag=string}	true	"Tag details"
+//	@Success		200		{object}	utils.TagResponse
+//	@Failure		400		{object}	utils.ErrorResponse	"Invalid request format"
+//	@Failure		401		{object}	utils.ErrorResponse	"Unauthorized"
+//	@Failure		500		{object}	utils.ErrorResponse	"Error creating tag"
+//	@Failure		500		{object}	utils.ErrorResponse	"Internal server error"
+//	@Router			/api/tags [POST]
 func CreateTag(w http.ResponseWriter, r *http.Request) {
 	response, err, status := services.HandleCreateTag(w, r)
 	if err != nil {
@@ -32,18 +33,19 @@ func CreateTag(w http.ResponseWriter, r *http.Request) {
 
 // delete a tag
 // find the tag using the name
-// @Summary Delete Tag
-// @Description Delete a tag
-// @Tags tags
-// @Accept json
-// @Produce json
-// @Param request body object{tag=string} true "Tag details"
-// @Success 200 {object} utils.TagResponse
-// @Failure 400 {object} utils.ErrorResponse "Invalid request format"
-// @Failure 401 {object} utils.ErrorResponse "Unauthorized"
-// @Failure 500 {object} utils.ErrorResponse "Error deleting tag"
-// @Failure 500 {object} utils.ErrorResponse "Internal server error"
-// @Router /api/tags [DELETE]
+
+//	@Summary		Delete Tag
+//	@Description	Delete a tag
+//	@Tags			tags
+//	@Accept			json
+//	@Produce		json
+//	@Param			request	body		object{tag=string}	true	"Tag details"
+//	@Success		200		{object}	utils.TagResponse
+//	@Failure		400		{object}	utils.ErrorResponse	"Invalid request format"
+//	@Failure		401		{object}	utils.ErrorResponse	"Unauthorized"
+//	@Failure		500		{object}	utils.ErrorResponse	"Error deleting tag"
+//	@Failure		500		{object}	utils.ErrorResponse	"Internal server error"
+//	@Router			/api/tags [DELETE]
 func DeleteTag(w http.ResponseWriter, r *http.Request) {
 	response, err, status := services.HandleDeleteTag(w, r)
 	if err != nil {
@@ -55,18 +57,19 @@ func DeleteTag(w http.ResponseWriter, r *http.Request) {
 }
 
 // Set Tag to a specific date with user_id, tag_name and date
-// @Summary Set Tag
-// @Description Set a tag to a specific date
-// @Tags tags
-// @Accept json
-// @Produce json
-// @Param request body object{user_id=string,text=string,date=string} true "Tag details"
-// @Success 200 {object} utils.TagResponse
-// @Failure 400 {object} utils.ErrorResponse "Invalid request format"
-// @Failure 401 {object} utils.ErrorResponse "Unauthorized"
-// @Failure 500 {object} utils.ErrorResponse "Error setting tag"
-// @Failure 500 {object} utils.ErrorResponse "Internal server error"
-// @Router /api/tags/set [POST]
+
+//	@Summary		Set Tag
+//	@Description	Set a tag to a specific date
+//	@Tags			tags
+//	@Accept			json
+//	@Produce		json
+//	@Param			request	body		object{user_id=string,text=string,date=string}	true	"Tag details"
+//	@Success		200		{object}	utils.TagResponse
+//	@Failure		400		{object}	utils.ErrorResponse	"Invalid request format"
+//	@Failure		401		{object}	utils.ErrorResponse	"Unauthorized"
+//	@Failure		500		{object}	utils.ErrorResponse	"Error setting tag"
+//	@Failure		500		{object}	utils.ErrorResponse	"Internal server error"
+//	@Router			/api/tags/set [POST]
 func SetTag(w http.ResponseWriter, r *http.Request) {
 	response, err, status := services.HandleSetTag(w, r)
 	if err != nil {
@@ -78,18 +81,19 @@ func SetTag(w http.ResponseWriter, r *http.Request) {
 }
 
 // remove tag from a specific date
-// @Summary Remove Tag
-// @Description Remove a tag from a specific date
-// @Tags tags
-// @Accept json
-// @Produce json
-// @Param request body object{user_id=string,text=string,date=string} true "Tag details"
-// @Success 200 {object} utils.TagResponse
-// @Failure 400 {object} utils.ErrorResponse "Invalid request format"
-// @Failure 401 {object} utils.ErrorResponse "Unauthorized"
-// @Failure 500 {object} utils.ErrorResponse "Error removing tag"
-// @Failure 500 {object} utils.ErrorResponse "Internal server error"
-// @Router /api/tags/remove [POST]
+
+//	@Summary		Remove Tag
+//	@Description	Remove a tag from a specific date
+//	@Tags			tags
+//	@Accept			json
+//	@Produce		json
+//	@Param			request	body		object{user_id=string,text=string,date=string}	true	"Tag details"
+//	@Success		200		{object}	utils.TagResponse
+//	@Failure		400		{object}	utils.ErrorResponse	"Invalid request format"
+//	@Failure		401		{object}	utils.ErrorResponse	"Unauthorized"
+//	@Failure		500		{object}	utils.ErrorResponse	"Error removing tag"
+//	@Failure		500		{object}	utils.ErrorResponse	"Internal server error"
+//	@Router			/api/tags/remove [POST]
 func RemoveTag(w http.ResponseWriter, r *http.Request) {
 	response, err, status := services.HandleRemoveTag(w, r)
 	if err != nil {
@@ -101,15 +105,16 @@ func RemoveTag(w http.ResponseWriter, r *http.Request) {
 }
 
 // get all tags of an user
-// @Summary Get Tags
-// @Description Get all tags
-// @Tags tags
-// @Accept json
-// @Produce json
-// @Success 200 {object} []utils.Tag
-// @Failure 401 {object} utils.ErrorResponse "Unauthorized"
-// @Failure 500 {object} utils.ErrorResponse "Internal server error"
-// @Router /api/tags [GET]
+
+//	@Summary		Get Tags
+//	@Description	Get all tags
+//	@Tags			tags
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	[]utils.Tag
+//	@Failure		401	{object}	utils.ErrorResponse	"Unauthorized"
+//	@Failure		500	{object}	utils.ErrorResponse	"Internal server error"
+//	@Router			/api/tags [GET]
 func GetTags(w http.ResponseWriter, r *http.Request) {
 	response, err, status := services.HandleGetTags(w, r)
 	if err != nil {
